# FaceRecognition

./: .gitignore  CMakeLists.txt  FaceRecognition.pro  README.md  main.cpp  main.py  requirements.txt  test.py
gui/: aboutFaceRecognition.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_aboutFaceRecognition.h  ui_mainwindow.h
resources/: resources.qrc
src/: main.cpp
src/core/: Detecter.cpp  Detecter.h  Detector.cpp  Detector.h  FMTCNN.cpp  FMTCNN.h  recognition.py
src/gui/: aboutFaceRecognition.ui  mainwindow.cpp  mainwindow.h  ui_aboutFaceRecognition.h  ui_mainwindow.h
src/ui/: getName.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_aboutFaceRecognition.h  ui_getName.h  ui_mainwindow.h
utils/core/: recognizer.py
utils/ui/: aboutFaceRecognition.ui  mainwindow.py  mainwindow.ui  ui_aboutFaceRecognition.py  ui_getName.py  ui_mainwindow.py
